tests/e2e/semantics/error_message_inliner.error
Error: syntax error in story at line 2, column 5

2|    b = a[true + true]
          ^

E0104: `Map[string,string]` can't be indexed with `true as int + true as int` of type `int`
