tests/e2e/semantics/error_message_inliner.story
a = {"a": "b"}
b = a[true + true]
